[package]
name = "day23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
#bitsvec = "0.1.1"
bitvec_simd = "0.20.5"
bitvector = "0.1.5"
itertools = "0.12.0"
ndarray = "0.15.6"
num = "0.4.1"
petgraph = "0.6.4"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.2"
